feat: add endpoint user summary
